# VisualMesh

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.py  .dockerignore  .gitignore  .style.yapf  11.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  VisualMesh.sublime-project  blender.py  dataset.py  equirectangular_intersection.py  example_net.yaml  mesh.py  plot.py  pyproject.toml  remesh.py  requirements.txt  tf.py
cmake/: VisualMeshConfig.cmake.in
cmake/Modules/: CompilerSetup.cmake  FindSPIRV.cmake  FindTensorFlow.cmake
cmake/Scripts/: wrap_opencl.py
cpp/: CMakeLists.txt
cpp/engine/cpu/: apply_activation.hpp  engine.hpp
cpp/engine/opencl/: engine.hpp
cpp/engine/opencl/kernels/: project_equidistant.cl
cpp/engine/opencl/operation/: make_network.hpp  wrapper.hpp
cpp/engine/vulkan/: engine.hpp
cpp/engine/vulkan/kernels/: load_image.hpp  make_network.hpp
cpp/engine/vulkan/operation/: create_command_buffer.hpp  create_descriptor_set.hpp
cpp/geometry/: Sphere.hpp
cpp/mesh/: lens.hpp  mesh.hpp  network_structure.hpp  node.hpp  visualmesh.hpp
cpp/mesh/model/: energy.hpp  grid_base.hpp  nmgrid6.hpp  nmgrid8.hpp  nmgrid_map.hpp  polar_map.hpp  radial4.hpp  radial8.hpp  ring_base.hpp  xmgrid8.hpp  xmgrid_map.hpp  xygrid8.hpp  xygrid_map.hpp
cpp/utility/: math.hpp  phi_difference.hpp  static_if.hpp
cpp/visualmesh/: lens.hpp  mesh.hpp  network_structure.hpp  projected_mesh.hpp  visualmesh.hpp
cpp/visualmesh/engine/cpu/: apply_activation.hpp  bayer.hpp  engine.hpp  pixel.hpp
cpp/visualmesh/engine/opencl/: engine.hpp
cpp/visualmesh/engine/opencl/kernels/: load_image.cl  project_equisolid.cl  project_rectilinear.cl
cpp/visualmesh/engine/opencl/operation/: make_context.hpp  make_network.hpp  make_queue.hpp  opencl_error_category.hpp  scalar_defines.hpp  wrapper.hpp
cpp/visualmesh/engine/vulkan/: engine.hpp
cpp/visualmesh/engine/vulkan/kernels/: load_image.hpp  make_network.hpp  reprojection.hpp
cpp/visualmesh/engine/vulkan/operation/: create_image.hpp  vulkan_error_category.hpp  wrapper.hpp
cpp/visualmesh/geometry/: Circle.hpp  Sphere.hpp
cpp/visualmesh/model/: grid_base.hpp  nmgrid4.hpp  nmgrid_map.hpp  polar_map.hpp  radial4.hpp  radial6.hpp  radial8.hpp  ring4.hpp  ring6.hpp  ring8.hpp  ring_base.hpp  xmgrid4.hpp  xmgrid_map.hpp  xygrid4.hpp  xygrid_map.hpp
cpp/visualmesh/utility/: fourcc.hpp  math.hpp  phi_difference.hpp  projection.hpp
example/: ArrayPrint.hpp  CMakeLists.txt  Timer.hpp  augmentation_visualisation.py  augmentations_example.yaml  benchmark.cpp  classified.cpp  dataset.hpp  draw.hpp  load_model.hpp  main.cpp  mesh_quality.cpp  mesh_types.cpp  model.yaml
example/images/: lens0000000.yaml  lens0000001.yaml  lens0000002.yaml  lens0000003.yaml  lens0000004.yaml  lens0000005.yaml  lens0000006.yaml  lens0000007.yaml  lens0000008.yaml  lens0000009.yaml  lens0000010.yaml  lens0000011.yaml  lens0000012.yaml  lens0000013.yaml  lens0000014.yaml  lens0000015.yaml  lens0000016.yaml  lens0000017.yaml  lens0000018.yaml  lens0000019.yaml  lens0000020.yaml  lens0000021.yaml  lens0000022.yaml  lens0000023.yaml  lens0000024.yaml  lens0000025.yaml  lens0000026.yaml  lens0000027.yaml  lens0000028.yaml  lens0000029.yaml
learning/: dataset.py  load.py  network.py  resample.py  show.py  test.py  training.py
mesh_check/: CMakeLists.txt  README.md  Timer.hpp  dataset.hpp  draw.hpp  mesh_types  mesh_types.cpp
mesh_check/images/: lens0000002.yaml
readme/: architecture.md  dataset.md  inference.md  quickstart.md  setup.md  testing.md  training.md
readme/flavour/: example.md  label.md  orientation.md  projection.md  view.md
src/: ArrayPrint.hpp  CMakeLists.txt  Circle.hpp  Cylinder.hpp  Sphere.hpp  Timer.hpp  VisualMesh.hpp  generate_training.cpp  main.cpp  make_mesh.cpp  opencl_error_category.hpp  tf_op.cpp  view_mesh.cpp  visual_mesh.hpp  visualmesh.hpp
src/cl/: init_network_buffer.cl  lens.cl  node.cl  project_equidistant.cl  project_equirectangular.cl  project_equisolid.cl  project_radial.cl  project_rectilinear.cl  read_image_to_network.cl
src/geometry/: Circle.hpp  Cylinder.hpp  Sphere.hpp
src/mesh/: classified_mesh.hpp  lens.hpp  mesh.hpp  network_structure.hpp  node.hpp  projected_mesh.hpp  test_mesh.hpp
src/tensorflow/: difference.cpp  map.cpp  project.cpp
src/util/: cone.hpp  fourcc.hpp  math.hpp  phi_difference.hpp  projection.hpp
src/utility/: cone.hpp  fourcc.hpp  math.hpp  phi_difference.hpp  projection.hpp  vulkan_compute.hpp
tensorflow/: CMakeLists.txt  align_graphs.cpp  difference.cpp  link_nearest.cpp  lookup.cpp  map.cpp  mesh_cache.hpp  model_op_base.hpp  project.cpp  shape_op_base.hpp  unmap.cpp
training/: __init__.py  build_dataset.py  dataset.py  export.py  find_lr.py  make_dataset.py  mesh_drawer.py  model.ckpt.data-00000-of-00001  model.ckpt.index  network.py  resample.py  test.py  testing.py  training.py  unexport.py
training/callbacks/: __init__.py  classification_images.py  find_lr.py  image_tensorboard.py  mesh_images.py  one_cycle.py  seeker_images.py
training/dataset/: __init__.py  classification_dataset.py  visual_mesh_dataset.py
training/flavour/: __init__.py  classification_flavour.py  dataset.py  image_callback.py  learning_rate.py  loss.py  merge_configuration.py  metrics.py  optimiser.py  progress_images.py  test_metrics.py
training/images/: __init__.py  classification_images.py  seeker_images.py
training/layer/: __init__.py  depthwise_seperable_graph_convolution.py  graph_convolution.py
training/learning_rate/: __init__.py  one_cycle.py  static.py
training/loss/: __init__.py  focal_loss.py  seeker_loss.py  weighted_loss.py
training/lr_policy/: __init__.py
training/metrics/: __init__.py  average_precision.py  average_recall.py  class_precision.py  class_recall.py  confusion_base.py  seeker_confusion_base.py  seeker_precision.py  seeker_recall.py  seeker_stddev.py
training/model/: __init__.py  visual_mesh_model.py
training/op/: __init__.py
training/projection/: __init__.py
training/variety/: __init__.py  classification_variety.py
(+83 files in other folders)
